# coding_test_k

./: .gitignore  Cargo.toml  README.md  cobertura.xml
src/: client.rs  lib.rs  main.rs  processor.rs  reader.rs  transaction.rs
test_data/: test_data.csv  test_data_garbage.csv  test_data_run1.csv  test_data_run2.csv
