[package]
name = "coding_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.137", features = ["derive"] }
csv = "1.1.6"
anyhow = "1.0.57"
thiserror = "1.0.31"
tokio = {version = "1.19.2", features = ["full"] }
tokio-stream = {version = "0.1.9", features = ["io-util"] }
async-stream = "0.3.3"
futures-core = "0.3.21"
futures-util = "0.3.21"